lavc/proresdec2: Do not mix variable declaration and statement.

Fixes ticket #6728.